--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,7 +2,10 @@
 
 html {
   background-image: linear-gradient(120deg, #fdfbfb 0%, #ebedee 100%);
-  height: 100vh;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 }
 
 body {
